<resources>
    <string name="app_name">Passinhos</string>
    <string name="app_name_lowcase">passinhos</string>

    <string name="data_username">Nome de usuário</string>
    <string name="data_name">Nome Completo</string>
    <string name="data_cpf">CPF</string>
    <string name="data_state">Estado</string>
    <string name="data_sydrome">Sindrome congenita</string>
    <string name="data_birthday">Data de nascimento</string>
    <string name="login_confirm">Logar</string>

    <string name="save_accounts">Contas salvas com sucesso!</string>
    <string name="resposable_info">Dados do Responsável</string>
    <string name="child_info">Dados da criança</string>

    <string name="title_activity_navgation">Navgation</string>
    <string name="title_baby">Bebê</string>
    <string name="title_map">Arredores</string>
    <string name="title_income">Renda</string>
    <string name="title_account">Contas</string>
    <string name="title_activity_t">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
