
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.passinhos.passinhos.AccountFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="16dp"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_save_black_24dp"
        android:layout_margin="16dp"/>

    <ScrollView
        android:id="@+id/account_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#fafafa">

            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardUseCompatPadding="true"
                app:cardElevation="4dp"
                app:cardCornerRadius="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="12dp"
                            android:text="@string/resposable_info"
                            android:textColor="@android:color/white"
                            android:textSize="24sp"
                            android:background="@color/colorPrimaryDark"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:elevation="5dp"
                        android:orientation="vertical"
                        android:padding="12dp"
                        android:paddingBottom="12dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/user"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:hint="@string/data_username"
                                android:inputType="text"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:paddingTop="10dp"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_marginTop="12dp"
                                android:hint="@string/data_name"
                                android:inputType="text"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/cpf"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_marginTop="12dp"
                                android:hint="@string/data_cpf"
                                android:inputType="number"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/state"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_marginTop="12dp"
                                android:hint="@string/data_state"
                                android:inputType="text"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/data_birthday"
                            android:textColor="@android:color/darker_gray" />

                        <DatePicker
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardUseCompatPadding="true"
                app:cardElevation="4dp"
                app:cardCornerRadius="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:background="@color/colorPrimary"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="12dp"
                                android:text="@string/child_info"
                                android:textColor="@android:color/white"
                                android:textSize="24sp"
                                android:background="@color/colorPrimaryDark"/>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimary" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:orientation="vertical"
                            android:padding="12dp"
                            android:paddingBottom="12dp">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:id="@+id/child_username"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:hint="@string/data_name"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:padding="8dp"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/child_cpf"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:hint="@string/data_cpf"
                                android:inputType="number"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:id="@+id/child_state"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:hint="@string/data_state"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:padding="8dp"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/data_birthday"
                                android:textColor="@android:color/darker_gray" />

                            <DatePicker
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"></DatePicker>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>